# diverso-conversion

./: .gitignore  README.md  environment.yml  pyproject.toml
src/diverso_conversion/: __main__.py  cli.py  conversion.py  gui.py
